--- a/index.html
+++ b/index.html
@@ -25,12 +25,20 @@
                     </ul>
                 </nav>    
             </div>
+            <!--<div class="square"></div>
+            <div class="rombo"></div>-->
+        </div>
+        <div class="box">
+            <div class="triangle-1"></div>
+            <div class="triangle-2"></div>
+            <div class="triangle-3"></div>
         </div>
     </header>
 
     <!--    section 1   -->
     <section class="section-1">
         <div class="content sec1">
+                <!--<div class="rombo2"></div>-->
             <div class="tittle-sec-1">
                 <a>Welcome to Moton</a>
                 <a class="asmart-t">Asmart & Creative Single Page Template</a>
@@ -295,9 +303,9 @@
                 <a class="a-inf-sec-6">This is how to keep in touch :)</a>
             </div>
             <div class="icons-sec-6">
-                <div class="lr-arrow"><img src="images/left-black.png" alt=""></div>
+                <div class="lr-arrow"><button><img src="images/left-black.png" alt=""></button></div>
                 <div><img src="images/twitter-2.png" alt=""></div>
-                <div class="lr-arrow1"><img src="images/right-black.png" alt=""></div>
+                <div class="lr-arrow1"><button><img src="images/right-black.png" alt=""></button></div>
             </div>
             <div class="info-sec-6">
                 <p class="p-sec-6"><a class="vin">@ Abd-Alrahaman Elgazzar </a><a class="white">Great work Abd-Alrahaman, I really love the application... hope you haveall the luck in our life... also have alook here</a> <a href="" class="vin">http://t.co/zfdgfdg</a></p>
