--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
     
     <header>
         <div class="content header-sec">
-            <div class="logo"><img src="images/moton-logo.png" alt=""></div>
+            <div class="logo"><img id="log-moton" src="images/moton-logo.png" alt=""></div>
+
+            <div class="nav-butt">
+                <input type="checkbox" class="checkbox" id="menu-toogle"/>
+                <label for="menu-toogle" class="menu-toogle"></label>
+        
+                <nav class="nav">
+                    <input class="butt-header" src="" type="text" name="" placeholder="Search">
+                    <a href="#" class="nav__item current">Home</a>
+                    <a href="#" class="nav__item">About</a>
+                    <a href="#" class="nav__item">Team</a>
+                    <a href="#" class="nav__item">Portfolio</a>
+                    <a href="#" class="nav__item">Other</a>
+                    <a href="#" class="nav__item">Contact</a>
+                </nav>
+                </nav>
+            </div>
             <div class="nav-header">
                 <nav>
                     <ul class="ul-1">
@@ -44,9 +60,9 @@
                 <a class="asmart-t">Asmart & Creative Single Page Template</a>
             </div>
             <div class="slides">
-                <div class="slide"><button><img src="images/back.png" alt=""></button></div>
-                <div class="img-sec-1"><img src="images/messi.png" alt=""></div>
-                <div class="slide"><button><img src="images/next.png" alt=""></button></div>
+                <div class="slide" id="slide-id-1"><button><img id="slide-1" class:"sl-sec-1" src="images/back.png" alt=""></button></div>
+                <div class="img-sec-1"><img class="messi-img" src="images/messi.png" alt=""></div>
+                <div class="slide" id="slide-id-2"><button><img id="slide-2" class:"sl-sec-1 img-slide" src="images/next.png" alt=""></button></div>
             </div>
         </div>
     </section>
@@ -162,11 +178,11 @@
                             <img class="sec4-img" src="images/blue-apple.png" alt=""><br>
                             <a class="a-img-msj">Blue Apple Soft</a>
                     </div>
-                    <div class="img-content">
+                    <div class="img-content img-t-app">
                             <img class="sec4-img" src="images/t-app.png" alt=""><br>
                             <a class="a-img-msj"></a>Together Application</a>
                     </div>
-                    <div class="img-content">
+                    <div class="img-content img-barca">
                             <img class="sec4-img" src="images/barca.png" alt=""><br>
                             <a class="a-img-msj">FCBarcelona Club</a>
                     </div>
@@ -176,9 +192,9 @@
                 </div>
             </div>
             <div class="circulos">
-                <div class="cir"></div>
-                <div class="cir"></div>
-                <div class="cir"></div>
+                <div class="cir" id="circ1"></div>
+                <div class="cir" id="circ2"></div>
+                <div class="cir" id="circ3"></div>
                 <div class="cir green"></div>
             </div>
         </div>
